--- a/creditcard-app/creditcard-client/src/app/creditcard-form/creditcard-form.component.html
+++ b/creditcard-app/creditcard-client/src/app/creditcard-form/creditcard-form.component.html
@@ -26,3 +26,5 @@
     <button type="submit"  class="btn btn-secondary btn-sm">Add</button>
   </form>
 </div>
+<app-creditcard-list [doReload]="isCardAdded"></app-creditcard-list>
+
